#BB-7-8-9 adjust tests